<resources>
    <string name="app_name">DroidCafe</string>
    <string name="action_settings">Settings</string>
    <string name="droid_cafe">Droid Cafe</string>
    <string name="droid_desserts">Droid Desserts</string>
    <string name="donut_desc">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_desc">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo_desc">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="order_sample_text">Order Sample Text</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="phone">Phone</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="notes">Notes</string>
    <string name="enter_notes">Enter Notes</string>
    <string name="delivery_text">Choose method of delivery</string>
    <string name="same_day">Same day messenger service</string>
    <string name="next_day">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string-array name="phone_types">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>
